microservices/service-3/eks-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-3
spec:
  type: ClusterIP
  selector:
    app: service-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
